// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout resolveStyles > should leave link with text children as it is 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "type": "TEXT",
            },
          ],
          "props": {
            "src": "url",
          },
          "type": "LINK",
        },
      ],
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolveStyles > should replace link with only many text instances as children 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "box": {},
              "children": [
                {
                  "type": "TEXT_INSTANCE",
                },
                {
                  "type": "TEXT_INSTANCE",
                },
                {
                  "type": "TEXT_INSTANCE",
                },
                {
                  "type": "TEXT_INSTANCE",
                },
              ],
              "props": {},
              "style": {},
              "type": "TEXT",
            },
          ],
          "props": {
            "src": "url",
          },
          "type": "LINK",
        },
      ],
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolveStyles > should replace link with only one text instance as children 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "box": {},
              "children": [
                {
                  "type": "TEXT_INSTANCE",
                },
              ],
              "props": {},
              "style": {},
              "type": "TEXT",
            },
          ],
          "props": {
            "src": "url",
          },
          "type": "LINK",
        },
      ],
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;

exports[`layout resolveStyles > should replace link with render prop 1`] = `
{
  "children": [
    {
      "children": [
        {
          "props": {
            "render": [Function],
          },
          "type": "TEXT",
        },
      ],
      "type": "PAGE",
    },
  ],
  "type": "DOCUMENT",
}
`;
